* Diferentiate prescription type (medical or feed)

Version 3.4.0 - 2015-01-22
* Initial release