@@ -3,6 +3,8 @@ version=3.4.0
 depends:
     farm
     jasper_reports
+extras_depend:
+    stock_lot_expiry
 xml:
     prescription.xml
     specie.xml
